# simulation-based-inference-framework

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  REVIEW.md  ROADMAP.md  cli.py  pyproject.toml  spec.tex
.github/workflows/: ci.yml
aps/: __init__.py  demo.py  loaders.py  schemas.py
docs/: STATUS.md
packs/cms_x6900_dijpsi/: LICENSE  metadata.yaml
packs/cms_x6900_dijpsi/data/: dijpsi_bins.csv
packs/cms_x6900_dijpsi/env/: requirements.txt
packs/cms_x6900_dijpsi/model/: likelihood.json  schema.json
packs/cms_x6900_dijpsi/validation/: expected_results.json  reproduce.py  tolerances.yaml
packs/toy_counting/: LICENSE  metadata.yaml
packs/toy_counting/data/: observed.csv
packs/toy_counting/model/: background.csv  likelihood.json  schema.json  signal.csv
packs/toy_counting/validation/: expected_results.json  reproduce.py  tolerances.yaml
packs/toy_poisson_template_v1/: LICENSE  metadata.yaml
packs/toy_poisson_template_v1/data/: binning.json  observations.csv
packs/toy_poisson_template_v1/model/: likelihood.json  nuisances.json  templates.json
packs/toy_poisson_template_v1/validation/: expected.json  reproduce.py  tolerances.yaml
runtime/: __init__.py  inference.py  likelihoods.py
scripts/: run_demo.py
surrogates/: __init__.py  builder.py  calibration.py
tests/: __init__.py  test_demo.py  test_inference.py  test_likelihoods.py  test_pack_loading.py  test_reproduce_toy_pack.py  test_surrogates.py  test_toy_pack.py
